--- a/app/config.ini
+++ b/app/config.ini
@@ -33,8 +33,8 @@ def.product_name       = "Product Name"
 def.from_mailaddress   = "root@119.75.231.235"
 def.aes_key 		   = "S4gD51bhdTYds"
 def.default_mail		= "no-reply@eneto2o.com"
-def.app_id				= "157978867714509"
-def.secret				= "6565ef8daf0c4f209f32407553112286"
+def.app_id				= "201087463348878"
+def.secret				= "e90126736fc256dae4e3306ad94ec333"
 
 date_default_timezone =Asia/Tokyo
 lang =/jp
@@ -78,8 +78,12 @@ routes.logout.defaults.controller    = "index"
 routes.logout.defaults.action        = "logout"
 
 routes.home.route                    = "home/"
-routes.home.defaults.controller      = "timeline"
+routes.home.defaults.controller      = "home"
 routes.home.defaults.action          = "home"
+
+routes.post_feed.route                    = "postfeed/"
+routes.post_feed.defaults.controller      = "home"
+routes.post_feed.defaults.action          = "postfeed"
 
 routes.detail_message.route                    = "message/:pm_id"
 routes.detail_message.defaults.controller      = "message"
