--- a/app/config.ini
+++ b/app/config.ini
@@ -39,6 +39,17 @@ def.secret				= "e90126736fc256dae4e3306ad94ec333"
 date_default_timezone =Asia/Tokyo
 lang =/jp
 
+;; Log Setting
+;;
+;; Log priority is
+;; ERR     = 3;  // Error: error conditions
+;; WARN    = 4;  // Warning: warning conditions
+;; INFO    = 6;  // Informational: informational messages
+;; DEBUG   = 7;  // Debug: debug messages
+[log]
+logFilePath = "logs/request.log"
+logPriority = 7
+
 [routing]
 
 routes.start.route                   			= "/"
